# SIDRE

./: .gitignore  LICENSE  MANIFEST.in  README.md  SIDRE.yaml  astrometry.py  config.py  flats.py  setup.cfg  shutter_correction.py  sort.py
SIDRE/: __init__.py  calibration.py  config.py  core.py  default.yaml  sort.py  utils.py
SIDRE/MEFData/: MEFData.py
