[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = SIDRE
description = Simple Imaging Data Reduction Engine
long_description = This is a package for doing X that relies on astropy
author = Josh Walawender
author_email = jmwalawender@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = joshwalawender/SIDRE
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev

[entry_points]
# astropy-package-template-example = packagename.example_mod:main
